--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,7 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 application.title=MyGame
 application.vendor=MyCompany
 assets.jar.name=assets.jar
@@ -35,6 +39,8 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -60,6 +66,7 @@ jnlp.signed=false
 main.class=trekwars.core.Main
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
