--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,10 +2,11 @@ annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
+ant.customtasks.libs=android-base
 application.title=MyGame
 application.vendor=MyCompany
 assets.jar.name=assets.jar
-assets.excludes=**/*.j3odata,**/*.mesh,**/*.skeleton,**/*.mesh\.xml,**/*.skeleton\.xml,**/*.scene,**/*.material,**/*.obj,**/*.mtl,**/*.3ds,**/*.dae,**/*.blend,**/*.blend*[0-9]
+assets.excludes=**/*.j3odata,**/*.mesh,**/*.skeleton,**/*.mesh.xml,**/*.skeleton.xml,**/*.scene,**/*.material,**/*.obj,**/*.mtl,**/*.3ds,**/*.dae,**/*.blend,**/*.blend*[0-9]
 assets.folder.name=assets
 assets.compress=true
 build.classes.dir=${build.dir}/classes
@@ -32,7 +33,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.jme3.classpath}:\
     ${libs.jme3-libraries.classpath}
@@ -61,12 +64,22 @@ jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.codebase.type=local
 jnlp.descriptor=application
 jnlp.enabled=false
+jnlp.mixed.code=default
 jnlp.offline-allowed=false
 jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+lwjgl.applet.height=480
+lwjgl.applet.width=640
 main.class=trekwars.core.Main
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
+mobile.android.enabled=true
+mobile.android.package=com.szyk.trekwars
+mobile.android.target=android-21
+obfuscate.options=-keep public class * extends com.jme3.app.Application{public *;}\n-keep public class * extends com.jme3.system.JmeSystemDelegate{public *;}\n-keep public class * implements com.jme3.renderer.Renderer{public *;}\n-keep public class * implements com.jme3.asset.AssetLoader{public *;}\n-keep public class * implements com.jme3.asset.AssetLocator{public *;}\n-keep public class * implements de.lessvoid.nifty.screen.ScreenController{public *;}\n-dontwarn\n-dontnote\n
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
