Included android jar

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,9 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.jme3-core.classpath}:\
-    ${libs.jme3-desktop.classpath}
+    ${libs.jme3-desktop.classpath}:\
+    ${libs.jme3-android.classpath}:\
+    libs/*.jar
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
