Yet another attempt

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,7 @@ javac.classpath=\
     ${libs.jme3-core.classpath}:\
     ${libs.jme3-desktop.classpath}:\
     ${libs.jme3-android.classpath}:\
-    libs/*.jar:\
+    ./libs/*.jar:\
     ${libs.jme3-android-native.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
