--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
 
     // Apply the application plugin to add support for building a CLI application
     id 'application'
+
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
 repositories {
@@ -30,9 +32,13 @@ application {
 }
 
 jar {
+    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA' 
     manifest {
         attributes(
                 'Main-Class': 'trekwars.App'
         )
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
